src/FWlib/cm32gpm3_sysctrl.h

 


// write
void SYSCTRL_WriteClkGate(uint32_t data) ;
 

// read 
uint32_t SYSCTRL_ReadClkGate(void);
 


//-----------------------------------------
// SYSCTRL_BlockRst
//
// set
void SYSCTRL_SetBlockRst_AHB_DMA (void);
 
void SYSCTRL_SetBlockRst_AHB_BB  (void);
 
void SYSCTRL_SetBlockRst_CW_BB   (void);
 
void SYSCTRL_SetBlockRst_PPS_BB  (void);
 
void SYSCTRL_SetBlockRst_RTC_BB  (void);
 
void SYSCTRL_SetBlockRst_RF_BB   (void);
void SYSCTRL_SetBlockRst_AHB_SPI0(void);
 
void SYSCTRL_SetBlockRst_APB_GPIO(void);
 
void SYSCTRL_SetBlockRst_APB_I2C (void);
 
void SYSCTRL_SetBlockRst_APB_SPI1(void);
 
void SYSCTRL_SetBlockRst_APB_TMR0(void);
 
void SYSCTRL_SetBlockRst_APB_TMR1(void);
 
void SYSCTRL_SetBlockRst_APB_TMR2(void);
 
void SYSCTRL_SetBlockRst_APB_SCI0(void);
 
void SYSCTRL_SetBlockRst_APB_SCI1(void);
 
void SYSCTRL_SetBlockRst_APB_ISOL(void);
 
void SYSCTRL_SetBlockRst_APB_PINC(void);
 


// clear
void SYSCTRL_ClearBlockRst_AHB_DMA (void)  ;
void SYSCTRL_ClearBlockRst_AHB_BB  (void)  ;
void SYSCTRL_ClearBlockRst_CW_BB   (void)  ;
void SYSCTRL_ClearBlockRst_PPS_BB  (void)  ;
void SYSCTRL_ClearBlockRst_RTC_BB  (void)  ;
void SYSCTRL_ClearBlockRst_RF_BB   (void)  ;
void SYSCTRL_ClearBlockRst_AHB_SPI0(void)  ;
void SYSCTRL_ClearBlockRst_APB_GPIO(void)  ;
void SYSCTRL_ClearBlockRst_APB_I2C (void)  ;
void SYSCTRL_ClearBlockRst_APB_SPI1(void)  ;
void SYSCTRL_ClearBlockRst_APB_TMR0(void)  ;
void SYSCTRL_ClearBlockRst_APB_TMR1(void)  ;
void SYSCTRL_ClearBlockRst_APB_TMR2(void)  ;
void SYSCTRL_ClearBlockRst_APB_SCI0(void)  ;
void SYSCTRL_ClearBlockRst_APB_SCI1(void)  ;
void SYSCTRL_ClearBlockRst_APB_ISOL(void)  ;
void SYSCTRL_ClearBlockRst_APB_PINC(void)  ;
                                           
                                           
// toggle                                  
void SYSCTRL_ToggleBlockRst_AHB_DMA (void) ;
void SYSCTRL_ToggleBlockRst_AHB_BB  (void) ;
void SYSCTRL_ToggleBlockRst_CW_BB   (void) ;
void SYSCTRL_ToggleBlockRst_PPS_BB  (void) ;
void SYSCTRL_ToggleBlockRst_RTC_BB  (void) ;
void SYSCTRL_ToggleBlockRst_RF_BB   (void) ;
void SYSCTRL_ToggleBlockRst_AHB_SPI0(void) ;
void SYSCTRL_ToggleBlockRst_APB_GPIO(void) ;
void SYSCTRL_ToggleBlockRst_APB_I2C (void) ;
void SYSCTRL_ToggleBlockRst_APB_SPI1(void) ;
void SYSCTRL_ToggleBlockRst_APB_TMR0(void) ;
void SYSCTRL_ToggleBlockRst_APB_TMR1(void) ;
void SYSCTRL_ToggleBlockRst_APB_TMR2(void) ;
void SYSCTRL_ToggleBlockRst_APB_SCI0(void) ;
void SYSCTRL_ToggleBlockRst_APB_SCI1(void) ;
void SYSCTRL_ToggleBlockRst_APB_ISOL(void) ;
void SYSCTRL_ToggleBlockRst_APB_PINC(void) ;
// write
void SYSCTRL_WriteBlockRst(uint32_t data) ;
// read 
uint32_t SYSCTRL_ReadBlockRst(void) ;
//-----------------------------------------
// SYSCTRL_SoftwareRst
//
// set 
void SYSCTRL_SetSoftwareRst(void) ;
 

// get
uint8_t SYSCTRL_GetSoftwareRst(void) ;
//-----------------------------------------
// SYSCTRL_RtcClkCount
//
// read 
uint32_t SYSCTRL_ReadRtcClkCount(void) ;
 


//-----------------------------------------
// SYSCTRL_PLLParamONE
//
// set
void SYSCTRL_SetPLLONE_N(uint8_t   data);
void SYSCTRL_SetPLLONE_M(uint8_t   data);
 
void SYSCTRL_SetPLLONE_OD(uint8_t  data);
 

// get 
uint32_t SYSCTRL_GetPLLONE(void);
//-----------------------------------------
// SYSCTRL_PLLParamTWO
//
// set
void SYSCTRL_SetPLLTWO_RST(uint8_t data);
 
void SYSCTRL_SetPLLTWO_BP(uint8_t  data);
 

// get 
uint32_t SYSCTRL_GetPLLTWO(void);
uint8_t SYSCTRL_PLL_LOCKED(void);