src/FWlib/cm32gpm3_sysctrl.nim


proc SYSCTRL_WriteClkGate*(data: uint32) {.importc: "SYSCTRL_WriteClkGate",
                                        header: "cm32gpm3_sysctrl.h".}
##  read

proc SYSCTRL_ReadClkGate*(): uint32 {.importc: "SYSCTRL_ReadClkGate",
                                   header: "cm32gpm3_sysctrl.h".}
## -----------------------------------------
##  SYSCTRL_BlockRst
##
##  set

proc SYSCTRL_SetBlockRst_AHB_DMA*() {.importc: "SYSCTRL_SetBlockRst_AHB_DMA",
                                    header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_AHB_BB*() {.importc: "SYSCTRL_SetBlockRst_AHB_BB",
                                   header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_CW_BB*() {.importc: "SYSCTRL_SetBlockRst_CW_BB",
                                  header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_PPS_BB*() {.importc: "SYSCTRL_SetBlockRst_PPS_BB",
                                   header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_RTC_BB*() {.importc: "SYSCTRL_SetBlockRst_RTC_BB",
                                   header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_RF_BB*() {.importc: "SYSCTRL_SetBlockRst_RF_BB",
                                  header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_AHB_SPI0*() {.importc: "SYSCTRL_SetBlockRst_AHB_SPI0",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_GPIO*() {.importc: "SYSCTRL_SetBlockRst_APB_GPIO",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_I2C*() {.importc: "SYSCTRL_SetBlockRst_APB_I2C",
                                    header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_SPI1*() {.importc: "SYSCTRL_SetBlockRst_APB_SPI1",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_TMR0*() {.importc: "SYSCTRL_SetBlockRst_APB_TMR0",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_TMR1*() {.importc: "SYSCTRL_SetBlockRst_APB_TMR1",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_TMR2*() {.importc: "SYSCTRL_SetBlockRst_APB_TMR2",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_SCI0*() {.importc: "SYSCTRL_SetBlockRst_APB_SCI0",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_SCI1*() {.importc: "SYSCTRL_SetBlockRst_APB_SCI1",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_ISOL*() {.importc: "SYSCTRL_SetBlockRst_APB_ISOL",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetBlockRst_APB_PINC*() {.importc: "SYSCTRL_SetBlockRst_APB_PINC",
                                     header: "cm32gpm3_sysctrl.h".}
##  clear

proc SYSCTRL_ClearBlockRst_AHB_DMA*() {.importc: "SYSCTRL_ClearBlockRst_AHB_DMA",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_AHB_BB*() {.importc: "SYSCTRL_ClearBlockRst_AHB_BB",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_CW_BB*() {.importc: "SYSCTRL_ClearBlockRst_CW_BB",
                                    header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_PPS_BB*() {.importc: "SYSCTRL_ClearBlockRst_PPS_BB",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_RTC_BB*() {.importc: "SYSCTRL_ClearBlockRst_RTC_BB",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_RF_BB*() {.importc: "SYSCTRL_ClearBlockRst_RF_BB",
                                    header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_AHB_SPI0*() {.importc: "SYSCTRL_ClearBlockRst_AHB_SPI0",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_GPIO*() {.importc: "SYSCTRL_ClearBlockRst_APB_GPIO",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_I2C*() {.importc: "SYSCTRL_ClearBlockRst_APB_I2C",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_SPI1*() {.importc: "SYSCTRL_ClearBlockRst_APB_SPI1",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_TMR0*() {.importc: "SYSCTRL_ClearBlockRst_APB_TMR0",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_TMR1*() {.importc: "SYSCTRL_ClearBlockRst_APB_TMR1",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_TMR2*() {.importc: "SYSCTRL_ClearBlockRst_APB_TMR2",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_SCI0*() {.importc: "SYSCTRL_ClearBlockRst_APB_SCI0",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_SCI1*() {.importc: "SYSCTRL_ClearBlockRst_APB_SCI1",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_ISOL*() {.importc: "SYSCTRL_ClearBlockRst_APB_ISOL",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ClearBlockRst_APB_PINC*() {.importc: "SYSCTRL_ClearBlockRst_APB_PINC",
                                       header: "cm32gpm3_sysctrl.h".}
##  toggle

proc SYSCTRL_ToggleBlockRst_AHB_DMA*() {.importc: "SYSCTRL_ToggleBlockRst_AHB_DMA",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_AHB_BB*() {.importc: "SYSCTRL_ToggleBlockRst_AHB_BB",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_CW_BB*() {.importc: "SYSCTRL_ToggleBlockRst_CW_BB",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_PPS_BB*() {.importc: "SYSCTRL_ToggleBlockRst_PPS_BB",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_RTC_BB*() {.importc: "SYSCTRL_ToggleBlockRst_RTC_BB",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_RF_BB*() {.importc: "SYSCTRL_ToggleBlockRst_RF_BB",
                                     header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_AHB_SPI0*() {.importc: "SYSCTRL_ToggleBlockRst_AHB_SPI0",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_GPIO*() {.importc: "SYSCTRL_ToggleBlockRst_APB_GPIO",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_I2C*() {.importc: "SYSCTRL_ToggleBlockRst_APB_I2C",
                                       header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_SPI1*() {.importc: "SYSCTRL_ToggleBlockRst_APB_SPI1",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_TMR0*() {.importc: "SYSCTRL_ToggleBlockRst_APB_TMR0",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_TMR1*() {.importc: "SYSCTRL_ToggleBlockRst_APB_TMR1",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_TMR2*() {.importc: "SYSCTRL_ToggleBlockRst_APB_TMR2",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_SCI0*() {.importc: "SYSCTRL_ToggleBlockRst_APB_SCI0",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_SCI1*() {.importc: "SYSCTRL_ToggleBlockRst_APB_SCI1",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_ISOL*() {.importc: "SYSCTRL_ToggleBlockRst_APB_ISOL",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_ToggleBlockRst_APB_PINC*() {.importc: "SYSCTRL_ToggleBlockRst_APB_PINC",
                                        header: "cm32gpm3_sysctrl.h".}
##  write

proc SYSCTRL_WriteBlockRst*(data: uint32) {.importc: "SYSCTRL_WriteBlockRst",
    header: "cm32gpm3_sysctrl.h".}
##  read

proc SYSCTRL_ReadBlockRst*(): uint32 {.importc: "SYSCTRL_ReadBlockRst",
                                    header: "cm32gpm3_sysctrl.h".}
## -----------------------------------------
##  SYSCTRL_SoftwareRst
##
##  set

proc SYSCTRL_SetSoftwareRst*() {.importc: "SYSCTRL_SetSoftwareRst",
                               header: "cm32gpm3_sysctrl.h".}
##  get

proc SYSCTRL_GetSoftwareRst*(): uint8 {.importc: "SYSCTRL_GetSoftwareRst",
                                     header: "cm32gpm3_sysctrl.h".}
## -----------------------------------------
##  SYSCTRL_RtcClkCount
##
##  read

proc SYSCTRL_ReadRtcClkCount*(): uint32 {.importc: "SYSCTRL_ReadRtcClkCount",
                                       header: "cm32gpm3_sysctrl.h".}
## -----------------------------------------
##  SYSCTRL_PLLParamONE
##
##  set

proc SYSCTRL_SetPLLONE_N*(data: uint8) {.importc: "SYSCTRL_SetPLLONE_N",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetPLLONE_M*(data: uint8) {.importc: "SYSCTRL_SetPLLONE_M",
                                      header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetPLLONE_OD*(data: uint8) {.importc: "SYSCTRL_SetPLLONE_OD",
                                       header: "cm32gpm3_sysctrl.h".}
##  get

proc SYSCTRL_GetPLLONE*(): uint32 {.importc: "SYSCTRL_GetPLLONE",
                                 header: "cm32gpm3_sysctrl.h".}
## -----------------------------------------
##  SYSCTRL_PLLParamTWO
##
##  set

proc SYSCTRL_SetPLLTWO_RST*(data: uint8) {.importc: "SYSCTRL_SetPLLTWO_RST",
                                        header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_SetPLLTWO_BP*(data: uint8) {.importc: "SYSCTRL_SetPLLTWO_BP",
                                       header: "cm32gpm3_sysctrl.h".}
##  get

proc SYSCTRL_GetPLLTWO*(): uint32 {.importc: "SYSCTRL_GetPLLTWO",
                                 header: "cm32gpm3_sysctrl.h".}
proc SYSCTRL_PLL_LOCKED*(): uint8 {.importc: "SYSCTRL_PLL_LOCKED",
                                 header: "cm32gpm3_sysctrl.h".}